# bilibili-video-downloader

./: .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: check-backend.yml  check-format.yml  check-frontend.yml
src/: App.vue  AppContent.vue  bindings.ts  injection_keys.ts  main.ts  store.ts  utils.tsx
src-plugin/: Cargo.toml
src-plugin/examples/: Cargo.toml  README.md
src-plugin/examples/basic-example/: Cargo.toml
src-plugin/examples/basic-example/src/: lib.rs
src-plugin/plugin-api/: Cargo.toml
src-plugin/plugin-api/src/: lib.rs
src-plugin/plugin-sdk/: Cargo.toml
src-plugin/plugin-sdk/src/: lib.rs
src-plugin/plugin-sdk/tests/: macro_smoke.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bili_client.rs  commands.rs  config.rs  danmaku_xml_to_ass.rs  downloader.rs  errors.rs  events.rs  extensions.rs  lib.rs  logger.rs  main.rs  plugin.rs  types.rs  utils.rs  wbi.rs
src-tauri/src/danmaku_xml_to_ass/: ass_writer.rs  mod.rs
src-tauri/src/downloader/: download_chunk_task.rs  download_manager.rs  download_progress.rs  download_task.rs  episode_info.rs  fmt_params.rs
src-tauri/src/downloader/tasks/: audio_task.rs  cover_task.rs  danmaku_task.rs  json_task.rs  nfo_task.rs  subtitle_task.rs  video_process_task.rs  video_task.rs
src-tauri/src/plugin/: hook_context.rs  host_api.rs  plugin_executor.rs  plugin_loader.rs  plugin_manager.rs  plugin_types.rs
src-tauri/src/types/: audio_quality.rs  available_media_formats.rs  bangumi_info.rs  bangumi_media_url.rs  bangumi_media_url_v2.rs  cheese_media_url.rs  get_available_media_formats_params.rs  get_bangumi_info_params.rs  get_cheese_info_params.rs  get_normal_info_params.rs  mod.rs  normal_media_url.rs  plugin_info.rs  restart_download_task_params.rs  search_result.rs  user_info.rs
src/components/: FloatLabelInput.vue
src/dialogs/: AboutDialog.vue  LogDialog.vue  LoginDialog.vue
src/dialogs/SettingsDialog/: SettingsDialog.vue
src/dialogs/SettingsDialog/components/: AssDanmakuSettings.vue  DownloadSettings.vue  FmtSettings.vue  NetworkSettings.vue  PluginSettings.vue
src/panes/BangumiFollow/: BangumiFollowPane.vue
src/panes/BangumiFollow/components/: BangumiFollowCard.vue  BangumiFollowPanel.vue
src/panes/DownloadPane/: DownloadPane.vue
src/panes/DownloadPane/components/: CompletedProgresses.vue  DownloadDirInput.vue  DownloadProgress.vue  ModifyProgressDialogContent.vue  UncompletedProgresses.vue
src/panes/FavPane/: FavPane.vue
src/panes/FavPane/components/: FavCard.vue  FavPanel.vue
src/panes/HistoryPane/: HistoryPane.vue
src/panes/HistoryPane/components/: HistoryCard.vue  HistoryPanel.vue
src/panes/SearchPane/: SearchPane.vue
src/panes/SearchPane/components/: BangumiPanel.vue  CheesePanel.vue  EpisodeCard.vue  NormalSeasonPanel.vue  (+2 more)
src/panes/WatchLaterPane/: WatchLaterPane.vue
(+2 files in other folders)
