[package]
name = "bilibili-video-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bilibili_video_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

specta = { version = "=2.0.0-rc.20", features = ["serde_json"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = { version = "=0.0.7" }

reqwest = { version = "0.12.22", default-features = false, features = ["default-tls", "system-proxy"] }
reqwest-retry = { version = "0.7.0" }
reqwest-middleware = { version = "0.4.2" }

anyhow = { version = "1.0.98" }
parking_lot = { version = "0.12.4", features = ["send_guard"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "local-time"] }
tracing-appender = { version = "0.2.3" }
notify = { version = "8.0.0" }
tokio = { version = "1.46.0", features = ["full"] }
byteorder = { version = "1.5.0" }
strfmt = { version = "0.2.4" }
uuid = { version = "1.17.0", features = ["v4"] }
bytes = { version = "1.10.1" }
fs4 = { version = "0.13.1" }
num_enum = { version = "0.7.4" }
chrono = { version = "0.4.41" }
prost = { version = "0.14.1" }
yaserde = { version = "0.12.0", features = ["yaserde_derive"] }
float-ord = { version = "0.3.2" }
memchr = { version = "2.7.5" }
md-5 = { version = "0.10.6" }
rand = { version = "0.9.1" }
base64 = { version = "0.22.1" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
