[package]
name = "bilibili-video-downloader-plugin-sdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "bilibili_video_downloader_plugin_sdk"

[dependencies]
bilibili-video-downloader-plugin-api = { path = "../plugin-api" }

eyre = { version = "0.6.12" }
serde_json = { version = "1" }
parking_lot = { version = "0.12.5" }
